prevent word wrap in scribble

--- a/src/ressources/tree.css
+++ b/src/ressources/tree.css
@@ -15,6 +15,7 @@ https://www.cssscript.com/clean-tree-diagram/
     margin: 0;
     padding: 0;
     position: relative;
+    white-space: nowrap;
 }
 
 .tree {
